--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                         <div class="header-content-right">
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">William Fowler</h1>
-                            <p>Orange Method Software Engineer Apprentice</p>
+                            <p>Software Engineer</p>
                             <a class="main-btn" href="https://dctrackerclient.apps-np.homedepot.com/">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
@@ -165,18 +165,15 @@
                 <div class="col-lg-8">
                     <div class="section-title text-center">
                         <h2 class="title">About Me</h2>
-                        <p>William Fowler is an Orange Method Software Engineer Apprentice, with experience
+                        <p>William Fowler is an Orange Method Software Engineer, with experience
                             developing full-stack web
                             applications.
-                            His background in Information Technology, Desktop Support, and Networking fundamentals
+                            His background in Information Technology, Networking fundamentals, and Desktop Support, 
                             inform his competitive
                             approach. William is
                             fueled by his passion for understanding the nuances of backend development.
                             He considers himself a ‘forever student,’ eager to both build on his academic foundations in
-                            Information
-                            Technology
-                            and
-                            Applied Science and stay in tune with the latest trends in development through continued
+                            Technology and Science by staying in tune with the latest trends in development through continued
                             coursework.</p>
                     </div> <!-- section title -->
                 </div>
@@ -185,8 +182,7 @@
                 <div class="col-lg-6">
                     <div class="about-content mt-50">
                         <h5 class="about-title">Hi There! I'm William Fowler</h5>
-                        <p>The last sixteen weeks of study through the Orange Method have allowed me to learn to
-                            leverage JavaScript, APIs, web frameworks,
+                        <p>The Orange Method has allowed me to leverage JavaScript, APIs, web frameworks,
                             and more through hands-on projects and real-world scenarios.</p>
                         <ul class="clearfix">
                             <li>
@@ -215,7 +211,7 @@
                                         <i class="lni-phone-handset"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Phone:</span> +1-404-935-8062</p>
+                                        <p><span>Phone:</span> +1-404-822-4027</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -225,7 +221,7 @@
                                         <i class="lni-map-marker"></i>
                                     </div>
                                     <div class="info-text">
-                                        <p><span>Location:</span> Marietta Technology Center, Marietta, GA</p>
+                                        <p><span>Location:</span> Home Depot Store Support Center, Atlanta, GA</p>
                                     </div>
                                 </div> <!-- single info -->
                             </li>
@@ -284,7 +280,7 @@
                         </div> <!-- skill item -->
                         <div class="skill-item mt-25">
                             <div class="skill-header">
-                                <h6 class="skill-title">Golang</h6>
+                                <h6 class="skill-title">Angular</h6>
                                 <div class="skill-percentage">
                                     <div class="count-box counted">
                                         <span class="counter">90</span>
