--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
                             <h4 class="sub-title">Hello, I’m</h4>
                             <h1 class="title">William Fowler</h1>
                             <p>Software Engineer</p>
-                            <a class="main-btn" href="https://dctrackerclient.apps-np.homedepot.com/">View my Work</a>
+                            <a class="main-btn" href="https://rapid-tracker.herokuapp.com/">View my Work</a>
                         </div> <!-- header content right -->
                     </div>
                     <div class="col-lg-6 offset-xl-1">
